# ticketing

./: .gitignore  pyproject.toml
appmodules/account/: admin.py  models.py
appmodules/account/migrations/: 0001_initial.py
appmodules/dummyapi/: apps.py  urls.py  views.py
config/: asgi.py  settings.py  urls.py  wsgi.py
