[tool.poetry]
name = "ticketing"
version = "0.1.0"
description = "Generic Ticketing System"
authors = ["shubham2110 <saxena.shubham.2110@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
djangorestframework = "^3.12.4"
Markdown = "^3.3.4"
django-filter = "^2.4.0"
psycopg2 = "^2.9.1"
drf-nested-routers = "^0.93.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
